<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/home_background_color"
    android:orientation="vertical" >

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/main_activity_top_margin"
	    android:gravity="center"
	    android:text="@string/status_header"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/text_color"
	    android:textColorHint="@android:color/white"
	    android:textSize="12sp"
	    android:textStyle="normal" />
	
	<TextView
	    android:id="@+id/textStatus"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text=""
	    android:textColor="@color/text_color"
	    android:textSize="@dimen/main_activity_large_text_margin"
	    android:textStyle="bold" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_marginTop="@dimen/main_activity_large_text_margin"
	    android:weightSum="100"
	    android:baselineAligned="false" >

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="50"
		    android:orientation="vertical" >

			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:text="@string/uptime_header"
			    android:textColor="@color/text_color"
			    android:textSize="@dimen/main_activity_small_text_size" />

			<TextView
			    android:id="@+id/textUptime"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:text=""
			    android:textColor="@color/text_color"
			    android:textSize="@dimen/main_activity_large_text_size"
			    android:textStyle="bold" />

		</LinearLayout>

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="50"
		    android:orientation="vertical" >

			<TextView
			    android:id="@+id/TextView01"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:text="@string/load_header"
			    android:textColor="@color/text_color"
			    android:textSize="@dimen/main_activity_small_text_size" />

		    <TextView
		        android:id="@+id/textLoad"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:gravity="center"
		        android:text=""
		        android:textColor="@color/text_color"
		        android:textSize="@dimen/main_activity_large_text_size"
		        android:textStyle="bold" />

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_marginTop="@dimen/main_activity_text_margin"
	    android:weightSum="100"
	    android:baselineAligned="false" >

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="50"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/TextView04"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/cpu_header"
	            android:textColor="@color/text_color"
	            android:textSize="@dimen/main_activity_small_text_size" />

	        <TextView
	            android:id="@+id/textCpu"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text=""
	            android:textColor="@color/text_color"
	            android:textSize="@dimen/main_activity_large_text_size"
	            android:textStyle="bold" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_weight="50"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/TextView05"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text="@string/mem_header"
	            android:textColor="@color/text_color"
	            android:textSize="@dimen/main_activity_small_text_size" />

	        <TextView
	            android:id="@+id/textMem"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center"
	            android:text=""
	            android:textColor="@color/text_color"
	            android:textSize="@dimen/main_activity_large_text_size"
	            android:textStyle="bold" />
	    </LinearLayout>
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >  
        
	    <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/system_control_header"
            android:textColor="@color/text_color"
            android:textSize="@dimen/main_activity_small_text_size" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="60dip"
	        android:layout_marginTop="@dimen/main_activity_text_margin"
	        android:layout_marginLeft="@dimen/main_activity_buttons_margin"
	        android:layout_marginRight="@dimen/main_activity_buttons_margin"
	        android:orientation="horizontal" >

	        <Button
	            android:id="@+id/buttonReboot"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:text="@string/button_reboot"
	            android:textColor="@color/text_color" />

	        <Button
	            android:id="@+id/buttonShutdown"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:text="@string/button_shutdown"
	            android:textColor="@color/text_color" />
	        
	    </LinearLayout>
	</LinearLayout>

</LinearLayout>

